--- a/06-model-infer/04-lesson/06-04-lesson.Rmd
+++ b/06-model-infer/04-lesson/06-04-lesson.Rmd
@@ -20,7 +20,7 @@ library(emo)
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # From http://www.rossmanchance.com/iscam2/data/movies03.txt
-hypdata_nonequalvar <- read_delim("data/movies03.txt", "\t") %>%
+hypdata_nonequalvar <- read_delim("data/movies03.txt", "\t") |>
   select(response = box.office, explanatory = score)
 
 set.seed(47474)
@@ -46,32 +46,32 @@ nonequaldata <- data.frame(explanatory, response)
 nonequal_lm <- augment(lm(response ~ explanatory, data=nonequaldata))
 
 starbucks <- readr::read_delim("data/starbucks.txt", "\t", escape_double = FALSE, trim_ws = TRUE)
-starbucks_lowFib <- starbucks %>% filter(Fiber < 15)
+starbucks_lowFib <- starbucks |> filter(Fiber < 15)
 
-obs_slope <- lm(Protein ~ Fiber, starbucks) %>%
-  tidy() %>%
-  filter(term == "Fiber") %>%
-  dplyr::select(estimate) %>%
+obs_slope <- lm(Protein ~ Fiber, starbucks) |>
+  tidy() |>
+  filter(term == "Fiber") |>
+  dplyr::select(estimate) |>
   pull() 
 
-obs_slope_lowFib <- lm(Protein ~ Fiber, starbucks_lowFib) %>%
-  tidy() %>%
-  filter(term == "Fiber") %>%
-  dplyr::select(estimate) %>%
+obs_slope_lowFib <- lm(Protein ~ Fiber, starbucks_lowFib) |>
+  tidy() |>
+  filter(term == "Fiber") |>
+  dplyr::select(estimate) |>
   pull() 
 
 set.seed(4747)
-perm_slope <- starbucks %>%
-  specify(Protein ~ Fiber) %>%
-  hypothesize("independence") %>%
-  generate(reps=1000, type="permute") %>%
+perm_slope <- starbucks |>
+  specify(Protein ~ Fiber) |>
+  hypothesize("independence") |>
+  generate(reps=1000, type="permute") |>
   calculate(stat = "slope")
 
 set.seed(4747)
-perm_slope_lowFib <- starbucks_lowFib %>%
-  specify(Protein ~ Fiber) %>%
-  hypothesize("independence") %>%
-  generate(reps=1000, type="permute") %>%  
+perm_slope_lowFib <- starbucks_lowFib |>
+  specify(Protein ~ Fiber) |>
+  hypothesize("independence") |>
+  generate(reps=1000, type="permute") |>  
   calculate(stat = "slope")
 
 n = 100
@@ -136,7 +136,7 @@ linear_lm <- augment(
 )
 
 ggplot(linear_lm, 
-       aes(x =. fitted, 
+       aes(x = .fitted, 
            y = .resid)) +
   geom_point() +
   geom_hline(yintercept=0)
@@ -649,15 +649,15 @@ The two regression lines have been superimposed so that the change in relationsh
 
 
 ```{r echo=TRUE, eval=FALSE}
-starbucks_lowFib <- starbucks %>% filter(Fiber < 15)
+starbucks_lowFib <- starbucks |> filter(Fiber < 15)
 
-lm(Protein ~ Fiber, data = starbucks) %>% tidy()
+lm(Protein ~ Fiber, data = starbucks) |> tidy()
 #          term estimate std.error statistic      p.value
 # 1 (Intercept) 7.526138 0.9924180  7.583637 1.101756e-11
 # 2       Fiber 1.383684 0.2451395  5.644476 1.286752e-07
 
 
-lm(Protein ~ Fiber, data = starbucks_lowFib) %>% tidy()
+lm(Protein ~ Fiber, data = starbucks_lowFib) |> tidy()
 #          term estimate std.error statistic      p.value
 # 1 (Intercept) 6.537053 1.0633640  6.147521 1.292803e-08
 # 2       Fiber 1.796844 0.2995901  5.997675 2.600224e-08
@@ -675,9 +675,9 @@ As expected, the values of the slope and intercept change depending on which dat
 
 ### Full data set
 ```{r echo=TRUE, eval=FALSE}
-perm_slope %>% mutate(
+perm_slope |> mutate(
     abs_perm_slope = abs(stat)
-) %>%
+) |>
   summarize(
     p_value = mean(
       abs_perm_slope > abs(obs_slope)
@@ -694,9 +694,9 @@ perm_slope %>% mutate(
 
 ### Low fiber data set
 ```{r echo=TRUE, eval=FALSE}
-perm_slope_lowFib %>% mutate(
+perm_slope_lowFib |> mutate(
   abs_perm_slope = abs(stat)
-) %>%
+) |>
   summarize(
     p_value = mean(
       abs_perm_slope > 
@@ -766,7 +766,7 @@ p <- ggplot(hypdata_outlier, aes(x = explanatory, y = response)) +
   geom_smooth(method = "lm", se = FALSE) 
 
 # Filter to remove the outlier
-hypdata_no_outlier <- hypdata_outlier %>% 
+hypdata_no_outlier <- hypdata_outlier |> 
   filter(response < 200)
 
 p +
@@ -799,7 +799,7 @@ The datasets with and without the outlier are provided as `hypdata_outlier` and 
 set.seed(4747)
 hypdata_outlier <- tibble(explanatory = rnorm(200, 3, 1), response = explanatory * 3 + 12 + rnorm(200, 0, 2))
 hypdata_outlier$response[47] <- 500
-hypdata_no_outlier <- hypdata_outlier %>% 
+hypdata_no_outlier <- hypdata_outlier |> 
   filter(response < 200)
 ```
 
@@ -847,45 +847,45 @@ response <- explanatory*3 + 12 + rnorm(50, 0, 10)
 response[47] <- 500
 hypdata_out <-  data.frame(explanatory, response)
 
-obs_slope_out <- lm(response ~ explanatory, hypdata_out) %>%
-  tidy() %>%
-  filter(term == "explanatory") %>%
-  select(estimate) %>%
+obs_slope_out <- lm(response ~ explanatory, hypdata_out) |>
+  tidy() |>
+  filter(term == "explanatory") |>
+  select(estimate) |>
   pull() 
 
-hypdata_noout <- hypdata_out %>% filter(explanatory < 4.6) 
+hypdata_noout <- hypdata_out |> filter(explanatory < 4.6) 
 
-obs_slope_noout <- lm(response ~ explanatory, hypdata_noout) %>%
-  tidy() %>%
-  filter(term == "explanatory") %>%
-  select(estimate) %>%
+obs_slope_noout <- lm(response ~ explanatory, hypdata_noout) |>
+  tidy() |>
+  filter(term == "explanatory") |>
+  select(estimate) |>
   pull() 
 
 set.seed(4747)
-perm_slope_out <- hypdata_out %>%
-  specify(response ~ explanatory) %>%
-  hypothesize("independence") %>%
-  generate(reps=500, type="permute") %>%
+perm_slope_out <- hypdata_out |>
+  specify(response ~ explanatory) |>
+  hypothesize("independence") |>
+  generate(reps=500, type="permute") |>
   calculate(stat = "slope")
 
 set.seed(4747)
-perm_slope_noout <- hypdata_noout %>%
-  specify(response ~ explanatory) %>%
-  hypothesize("independence") %>%
-  generate(reps=500, type="permute") %>%  
+perm_slope_noout <- hypdata_noout |>
+  specify(response ~ explanatory) |>
+  hypothesize("independence") |>
+  generate(reps=500, type="permute") |>  
   calculate(stat = "slope")
 ```
 
 
 ```{r ex46, exercise=TRUE}
 # Calculate the p-value with the outlier
-perm_slope_out %>% 
-  mutate(abs_perm_slope = ___) %>%
+perm_slope_out |> 
+  mutate(abs_perm_slope = ___) |>
   summarize(p_value = ___)
 
 # Calculate the p-value without the outlier
-perm_slope_noout %>% 
-  mutate(abs_perm_slope = ___) %>%
+perm_slope_noout |> 
+  mutate(abs_perm_slope = ___) |>
   summarize(p_value = ___)
 ```
 
@@ -899,13 +899,13 @@ Repeat the same procedure twice and compare the p-values.
 
 ```{r ex46-solution}
 # Calculate the p-value with the outlier
-perm_slope_out %>% 
-  mutate(abs_perm_slope = abs(stat)) %>%
+perm_slope_out |> 
+  mutate(abs_perm_slope = abs(stat)) |>
   summarize(p_value = mean(abs_perm_slope >= abs(obs_slope_out)))
 
 # Calculate the p-value without the outlier
-perm_slope_noout %>% 
-  mutate(abs_perm_slope = abs(stat)) %>%
+perm_slope_noout |> 
+  mutate(abs_perm_slope = abs(stat)) |>
   summarize(p_value = mean(abs_perm_slope >= abs(obs_slope_noout)))
 ```
 
