--- a/06-model-infer/05-lesson/06-05-lesson.Rmd
+++ b/06-model-infer/05-lesson/06-05-lesson.Rmd
@@ -24,9 +24,9 @@ LAhomes <- read_csv("data/LAhomes.csv")
 restNYC <- read_csv("data/restNYC.csv")
 change <- read_csv("data/coins.csv")
 
-change <- change %>%
-  mutate(Small= Dimes + Nickels + Pennies) %>%
-  mutate(Amount = Dollars) %>%
+change <- change |>
+  mutate(Small= Dimes + Nickels + Pennies) |>
+  mutate(Amount = Dollars) |>
   dplyr::select(-Dollars)
 ```
 
@@ -142,7 +142,7 @@ As you saw in the previous lesson, transforming the variables can often transfor
 
 
 ```{r echo=TRUE, message=FALSE, warning=FALSE}
-LAhomes <- LAhomes %>%
+LAhomes <- LAhomes |>
    filter(bed > 0)
 
 ggplot(LAhomes, aes(bed, price)) +
@@ -168,10 +168,10 @@ ggplot(LAhomes, aes(bed, price)) +
 
 ```{r ex51-solution}
 # Create a tidy model
-lm(price ~ bed, data = LAhomes) %>% tidy()
+lm(price ~ bed, data = LAhomes) |> tidy()
 
 # Create a tidy model using the log of both variables
-lm(log(price) ~ log(bed), data = LAhomes) %>% tidy()
+lm(log(price) ~ log(bed), data = LAhomes) |> tidy()
 ```
 
 
@@ -185,7 +185,7 @@ Transforming variables is a powerful tool to use when running linear regressions
 
 You will need to run the linear model before answering the question:
 
-`lm(log(price) ~ log(sqft), data = LAhomes) %>% tidy()`
+`lm(log(price) ~ log(sqft), data = LAhomes) |> tidy()`
 
 ```{r ex1, exercise=TRUE}
 
@@ -249,7 +249,7 @@ The scatterplot on total amount of money versus total number of coins indicates 
 
 
 ```{r eval=FALSE, echo=TRUE}
-lm(Amount ~ Coins, data = change) %>% tidy()
+lm(Amount ~ Coins, data = change) |> tidy()
 #          term estimate std.error statistic  p.value
 # 1 (Intercept)   0.1449    0.0902      1.61 1.13e-01
 # 2       Coins   0.0945    0.0063     14.99 6.01e-22
@@ -274,7 +274,7 @@ Additionally, the amount of money also seems to be linearly related to the numbe
 
 
 ```{r echo=TRUE, eval=FALSE}
-lm(Amount ~ Small, data = change) %>% tidy()
+lm(Amount ~ Small, data = change) |> tidy()
 #          term estimate std.error statistic  p.value
 # 1 (Intercept)   0.4225    0.1244      3.40 1.22e-03
 # 2       Small   0.0989    0.0118      8.38 1.10e-11
@@ -292,7 +292,7 @@ The liner model on the number of small coins reinforces the previous plot with a
 $\hat{\text{Amount}} = -0.00554 + 0.25862 \cdot \text{Coins} - 0.21611 \cdot \text{Small Coins}$
 
 ```{r echo=TRUE, eval=FALSE}
-lm(Amount ~ Coins + Small, data = change) %>% tidy()
+lm(Amount ~ Coins + Small, data = change) |> tidy()
 #          term estimate std.error statistic  p.value
 # 1 (Intercept) -0.00554   0.02735    -0.202 8.40e-01
 # 2       Coins  0.25862   0.00682    37.917 3.95e-43
@@ -338,7 +338,7 @@ Call `lm()` with a formula and the dataset, then pass the model to `tidy()`.
 
 ```{r ex52-solution}
 # Output the tidy model
-lm(log(price) ~ log(sqft), data = LAhomes) %>% tidy()
+lm(log(price) ~ log(sqft), data = LAhomes) |> tidy()
 ```
 
 
@@ -376,7 +376,7 @@ Call `lm()` with a formula and the dataset, then pass the model to `tidy()`.
 
 ```{r ex53-solution}
 # Output the tidy model
-lm(log(price) ~ log(bath), data = LAhomes) %>% tidy()
+lm(log(price) ~ log(bath), data = LAhomes) |> tidy()
 ```
 
 
@@ -411,7 +411,7 @@ ggpairs(LAhomes, columns = c("price", "sqft", "bath"))
 
 ```{r ex54-solution}
 # Output the tidy model
-lm(log(price) ~ log(sqft) + log(bath), data = LAhomes) %>% tidy()
+lm(log(price) ~ log(sqft) + log(bath), data = LAhomes) |> tidy()
 ```
 
 ## Multiple linear regression
@@ -421,13 +421,13 @@ You have seen multiple linear regression in previous tutorials. And throughout t
 ### Bathrooms negative coefficient
 
 ```{r echo=TRUE}
-lm(log(price) ~  log(bath), data=LAhomes) %>% tidy()
+lm(log(price) ~  log(bath), data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)    12.23    0.0280     437.2  0.00e+00
 # 2   log(bath)     1.43    0.0306      46.6 9.66e-300
 
 
-lm(log(price) ~ log(sqft) + log(bath), data=LAhomes) %>% tidy()
+lm(log(price) ~ log(sqft) + log(bath), data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)    2.514    0.2619     9.601  2.96e-21
 # 2   log(sqft)    1.471    0.0395    37.221 1.19e-218
@@ -444,13 +444,13 @@ The reason for the switch in sign for the coefficients is similar to the example
 
 
 ```{r echo=TRUE}
-lm(log(price) ~  log(bath), data=LAhomes) %>% tidy()
+lm(log(price) ~  log(bath), data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)    12.23    0.0280     437.2  0.00e+00
 # 2   log(bath)     1.43    0.0306      46.6 9.66e-300
 
 
-lm(log(price) ~ log(sqft) + log(bath), data=LAhomes) %>% tidy()
+lm(log(price) ~ log(sqft) + log(bath), data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)    2.514    0.2619     9.601  2.96e-21
 # 2   log(sqft)    1.471    0.0395    37.221 1.19e-218
@@ -473,7 +473,7 @@ We interpret the last p-value in the second model as information that the bathro
 
 
 ```{r echo=TRUE}
-lm(log(price) ~ log(bath) + bed, data=LAhomes) %>% tidy()
+lm(log(price) ~ log(bath) + bed, data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)   11.965    0.0384    311.67  0.00e+00
 # 2   log(bath)    1.076    0.0465     23.14 2.38e-102
@@ -490,7 +490,7 @@ Similarly, GIVEN THE NUMBER OF BEDROOMS IS IN THE MODEL, THE NUMBER OF BATHROOMS
 
 
 ```{r echo=TRUE}
-lm(log(price) ~ log(sqft) + log(bath) + bed, data=LAhomes) %>% tidy()
+lm(log(price) ~ log(sqft) + log(bath) + bed, data=LAhomes) |> tidy()
 #          term estimate std.error statistic   p.value
 # 1 (Intercept)   1.5364    0.2894     5.310  1.25e-07
 # 2   log(sqft)   1.6456    0.0454    36.215 6.27e-210
@@ -550,10 +550,10 @@ ggpairs(restNYC, columns = c("Price", "Service", "Food", "Decor"))
 
 ```{r ex55-solution}
 # Output the first model
-lm(Price ~ Service, data = restNYC) %>% tidy()
+lm(Price ~ Service, data = restNYC) |> tidy()
 
 # Output the second model
-lm(Price ~ Service + Food + Decor, data = restNYC) %>% tidy()
+lm(Price ~ Service + Food + Decor, data = restNYC) |> tidy()
 ```
 
 
@@ -565,7 +565,7 @@ What is the correct interpretation of the coefficient on `Service` in the linear
 
 
 You will need to run the linear model before answering the question:
-`lm(Price ~ Service + Food + Decor, data=restNYC) %>% tidy()`
+`lm(Price ~ Service + Food + Decor, data=restNYC) |> tidy()`
 
 
 ```{r ex56, exercise=TRUE}
